Tri sur les Dates : OK

--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
 <body>
 
 <style>
-    table.triTablo th { cursor: pointer ; }
+    th.thTri { cursor: pointer ; }
 </style>
 
 <div id="page">
@@ -20,17 +20,18 @@
 <h1>Test triTablo</h1>
 
 <table class="triTablo centre">
-    <tr><th>Col 1</th><th>Col 2</th><th>Col3</th></tr>
-    <tr><td>aaaa</td><td>aaaa</td><td>aaaa</td></tr>
-    <tr><td>cccc</td><td>gggg</td><td>bbba</td></tr>
-    <tr><td>ffff</td><td>ffff</td><td>ffff</td></tr>
-    <tr><td>bbbb</td><td>bbbb</td><td>bbbb</td></tr>
-    <tr><td>cucu</td><td>iiii</td><td>eeee</td></tr>
-    <tr><td>baba</td><td>baba</td><td>baba</td></tr>
+    <tr><th>Col 1</th><th>Col 2</th><th>Date de truc</th></tr>
+    <tr><td>aaaa</td><td>aaaa</td><td>28/02/2036</td></tr>
+    <tr><td>cccc</td><td>gggg</td><td>28/03/2036</td></tr>
+    <tr><td>ffff</td><td>ffff</td><td>28/04/2032</td></tr>
+    <tr><td>bbbb</td><td>bbbb</td><td>28/02/2031</td></tr>
+    <tr><td>cucu</td><td>iiii</td><td>26/02/2036</td></tr>
+    <tr><td>baba</td><td>baba</td><td>22/02/2036</td></tr>
 </table>
 
 </div>
 
+<script type="text/javascript" src="clog.js"></script>
 <script type="text/javascript" src="triTablo.js"></script>
 
 </body>
