--- a/test.html
+++ b/test.html
@@ -13,6 +13,7 @@
 
 <style>
     th.thTri { cursor: pointer ; }
+    th.thTri:hover { color: yellow ;}
 </style>
 
 <div id="page">
@@ -20,13 +21,13 @@
 <h1>Test triTablo</h1>
 
 <table class="triTablo centre">
-    <tr><th>Col 1</th><th>Col 2</th><th>Date de truc</th></tr>
-    <tr><td>aaaa</td><td>aaaa</td><td>28/02/2036</td></tr>
-    <tr><td>cccc</td><td>gggg</td><td>28/03/2036</td></tr>
-    <tr><td>ffff</td><td>ffff</td><td>28/04/2032</td></tr>
-    <tr><td>bbbb</td><td>bbbb</td><td>28/02/2031</td></tr>
-    <tr><td>cucu</td><td>iiii</td><td>26/02/2036</td></tr>
-    <tr><td>baba</td><td>baba</td><td>22/02/2036</td></tr>
+    <tr><th>Col 1</th><th>Col 2</th><th>Date sur 10</th><th>Date sur 8</th></tr>
+    <tr><td>aaaa</td><td>aaaa</td><td>28/02/2036</td><td>28/02/36</td></tr>
+    <tr><td>cccc</td><td>gggg</td><td>28/03/2036</td><td>28/03/36</td></tr>
+    <tr><td>ffff</td><td>ffff</td><td>28/04/2032</td><td>28/04/38</td></tr>
+    <tr><td>bbbb</td><td>bbbb</td><td>28/02/2031</td><td>28/02/31</td></tr>
+    <tr><td>cucu</td><td>iiii</td><td>26/02/2036</td><td>26/02/36</td></tr>
+    <tr><td>baba</td><td>baba</td><td>22/02/2036</td><td>22/02/36</td></tr>
 </table>
 
 </div>
